packages/core/src/table/_table-styles.scss
/* ... */
.#{$header-prefix} {
  @include header-bg;

  &__cell {
    position: relative;
    box-sizing: border-box;
    text-align: start;
    vertical-align: middle;

    @include header-bg;

    &--fixed {
      position: sticky;
      z-index: 2;

      @include header-bg;
    }
  }

  &__cell-content {
    width: 100%;
    display: flex;
    flex-flow: row;
    align-items: center;
    justify-content: space-between;
  }

  &__cell-actions {
    flex: 1;
    display: flex;
    flex-flow: row;
    gap: spacing.semantic-variable(gap, tiny);
    align-items: center;
    justify-content: flex-start;
  }

  &__cell-title {
    @include typography.overflow-ellipsis();

    color: palette.semantic-variable(text, neutral-strong);
  }

  &__cell-icon {
    border: none;
    border-radius: radius.variable(base);
    width: spacing.semantic-variable(size, element, base);
    height: spacing.semantic-variable(size, element, base);
    color: palette.semantic-variable(icon, neutral-light);
    transition: transition.standard(color, fast);

    &:hover {
      color: palette.semantic-variable(icon, neutral-bold);
    }

    &:focus-visible {
      outline: none;
      box-shadow: effect.variable(focus, primary);
    }
  }
}

.#{$body-prefix} {
  &__virtual-container {
    position: relative;
    width: 100%;
  }

  &__row {
    @include surface-bg();

    &--highlight {
      td {
        @include highlight-bg;
      }
    }

    &--selected {
      td {
        @include active-bg();
      }

      &:hover,
      &.#{$body-prefix}__row--highlight {
        td {
          @include active-hover-bg();
        }
      }
    }

    &--dragging {
      filter: drop-shadow(0 4px 20px palette.semantic-variable(shadow, dark));
      width: 100%;
      display: flex;
      align-items: center;
      border-bottom: 1px solid palette.semantic-variable(separator, neutral-faint);

      td {
        border-bottom: none;
      }
    }

    &--adding {
      td {
        @include active-bg;
      }
    }

    &--deleting {
      td {
        background-color: palette.semantic-variable("background", error-ghost);
      }
    }

    &--fading-out {
      opacity: 0;
      transition: transition.entrance(opacity, moderate);

      td {
        background-color: palette.semantic-variable("background", error-ghost);
      }
    }

    &--separator {
      td {
        border-bottom: 3px solid palette.semantic-variable("background", neutral-subtle);
      }
    }

    &--state-added {
      td {
        background-color: palette.semantic-variable("background", brand-ghost);
      }
    }

    &--state-deleted {
      td {
        background-color: palette.semantic-variable("background", error-ghost);
      }
    }

    &--state-disabled {
      td {
        background-color: palette.semantic-variable("background", neutral-subtle);
      }
    }

    &--zebra {
      td {
        background-color: palette.semantic-variable("background", neutral-ghost);
      }

      &.#{$body-prefix}__row--highlight {
        td {
          @include highlight-bg;
        }
      }

      &.#{$body-prefix}__row--selected {
        td {
          @include active-bg();
        }

        &:hover,
        &.#{$body-prefix}__row--highlight {
          td {
            @include active-hover-bg();
          }
        }
      }
    }
  }

  &__cell {
    text-align: start;
    vertical-align: middle;
  }
}

.#{$cell-prefix} {
  @include surface-bg();

  &--ellipsis {
    @include typography.overflow-ellipsis();
  }

  &--align-start {
    justify-content: flex-start;
    text-align: start;
  }

  &--align-center {
    justify-content: center;
    text-align: center;
  }

  &--align-end {
    justify-content: flex-end;
    text-align: end;
  }

  &--highlight {
    @include highlight-bg();
  }

  &--fixed {
    position: sticky;
  }

  &--fixed-start {
    inset-inline-start: var(--fixed-start-offset, 0);
    z-index: #{map.get($z-index-config, sticky-cell-at-start)};

    @include fixed-column-shadow('start');
  }

  &--fixed-end {
    inset-inline-end: var(--fixed-end-offset, 0);
    z-index: #{map.get($z-index-config, sticky-cell-at-end)};

    @include fixed-column-shadow('end');
  }

  &--fixed-shadow {
    @include fixed-column-shadow-active('start');
  }

  &--fixed-end#{&}--fixed-shadow {
    @include fixed-column-shadow-active('end');
  }

  &__content {
    display: block;
    word-break: break-all;
  }

  &__actions {
    display: inline-flex;
    align-items: center;
    gap: spacing.semantic-variable(gap, base);
  }
}

.#{$prefix}__drag-or-pin-handle-cell {
  text-align: center;
  vertical-align: middle;
}

.#{$prefix}__drag-or-pin-handle {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  cursor: grab;

  &:active {
    cursor: grabbing;
  }
}

.#{$prefix}__pin-handle-icon {
  @include button-utils.reset();

  display: inline-flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;

  &:active {
    cursor: pointer;
  }
}

.#{$prefix}__collect-handle-icon {
  @include button-utils.reset();

  display: inline-flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;

  &--disabled {
    cursor: not-allowed;
    opacity: 0.5;
  }
}

.#{$prefix}__selection-checkbox {
  height: $action-height;
  display: flex;
  align-items: center;
  justify-content: center;
}

.#{$prefix}__expand-cell {
  text-align: center;
  vertical-align: middle;
}

.#{$prefix}__expand-icon {
  @include button-utils.reset();

  width: 100%;
  height: $action-height;
  display: flex;
  align-items: center;
  justify-content: center;
  color: palette.semantic-variable(icon, neutral-strong);
  transition: transition.entrance(transform, moderate);

  &--expanded {
    transform: rotate(90deg);
  }
}
/* ... */

